<resources>
    <string name="app_name">CharDee MacDennis</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="chardee_macdennis">CharDee\nMacDennis</string>
    <string name="express_game">Express</string>
    <string name="player_1_button">player 1 button</string>
    <string name="mind_deck_button">Mind deck button</string>
    <string name="body_deck_button">body deck button</string>
    <string name="spirit_deck_button">spirit deck button</string>
    <string name="how_many_players_are_playing">How many players are playing?</string>
    <string name="key_pref_music_volume">preference music volume</string>
    <string name="full_game">Full</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="judge_sub1">- reads cards</string>
    <string name="judge_sub2">- decides card winners</string>
    <string name="judge_sub3">- final say on everything</string>
    <string name="splitTeam_sub1">- good friends should be split</string>
    <string name="splitTeam">Split into two teams</string>
    <string name="judge_sub0">- ONLY ONE HOLDING THE PHONE</string>
    <string name="deck_msg_title">Few More Things…</string>
    <string name="before_we_start">Before we start...</string>
    <string name="pick_a_judge">Pick a Judge</string>
    <string name="reads_cards">Reads Cards</string>
    <string name="has_final_say_on_everything">Has final say on EVERYTHING</string>
    <string name="ex_who_wins_card">Ex: Who wins card</string>
    <string name="rule_interpretation">Rule interpretation</string>
    <string name="facilitates_the_game">Facilitates the game</string>
    <string name="split_into_2_teams">Split into 2 teams</string>
    <string name="start">Start</string>
    <string name="new_game">New Game</string>
    <string name="time_out_used">Time out already used!</string>
    <string-array name="mind_deck_title">
        <item>Cat In A Sleeve</item>
        <item>Blind Artist</item>
        <item>Lite Beer Taste Test</item>
        <item>10 Digits</item>
        <item>Hand Actors Studio</item>
        <item>Hide the Coin</item>
        <item>Human Calculator</item>
        <item>Lie to Me</item>
        <item>The Patriot</item>
        <item>Sensual Footing</item>
        <item>Sex Offender</item>
        <item>Sexual History</item>
        <item>Blind Pour</item>
        <item>Shut the Fuck UP</item>
        <item>Candy Shopping</item>
        <item>Reverse Spelling Bee</item>
        <item>Trumpisms</item>
        <item>Wheel Barrel Drawing</item>
        <item>World Traveler</item>
        <item>Nick Names</item>
    </string-array>
    <string-array name="mind_deck_supplies">
        <item>blanket</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="mind_deck_description">
        <item>Have you ever wrapped pretended you are a burrito and have your siblings eat you? No? Well, me neither… but many cats have pretend to be burritos by climbing into a sleeve and pur helplessly while their owners pictures, and after today so will you.  The two shortest member from each team will go head to head in cat in a sleeve race.  They will be wrapped in a blanket and race across the room.  The winner gets this card, and the loser is a loser.</item>
        <item>The artist from both teams must draw an object decided by the judge on their respective teammates back. Teammate being drawn on must guess the clue solely on feel. First to guess correctly wins the card. Opposing team must drink a glass of wine each.  The game shown here is what you can hope to achieve</item>
        <item>Teams must nominate a blind taste tester. Three one ounce “lite beers” are poured in front of the tester, with full beers sitting to the side. If the player cannot correctly label each beer, the player must consume the remaining beer in the cans. If one team player correctly guesses each beer, and the other team fails to do the same, winning team gets the card and losing team has to finish the beer. If both players guess wrong, or both players guess correctly, another player from each team must attempt to complete the task until the correct answer is achieved by only one side."</item>
        <item>Have the opposing team write down a 10-digit number on a piece of paper and hand it to a player on your team. The player can then speak the number only once. The remaining players on the team then have to keep the number in their heads (no speaking) for 30 seconds starting after the last number was spoken. During the 30 seconds the opposing team can use whatever verbal attacks they want in order to confuse the other players. Completion wins the card. Losing team must drink a glass of wine each</item>
        <item>Opposing team chooses a popular movie that everyone would know. Card-drawing team chooses a player to act out the movie using only their hands and sound effects. No actual words may be spoken and actor must remain seated. If team guesses correctly within 30 seconds, they get the card.</item>
        <item>Opposing team members all place hands flat on the table, with one hand hiding a coin. The Card-drawing team must decide which hand hides the coin. If the team guesses correctly, they get the card. Card-drawing team may repeat BUT every player must consume a new full glass of wine before opposing team resets coin.</item>
        <item>Have the other team write down two 2-digit numbers. Your team has 30 seconds to multiply those numbers in your heads (no paper, no calculator, no abacus). Completion wins the card. Losing team must consume a glass of wine each.</item>
        <item>Drawer plays 2 truths 1 lie against the opposing team. If the opposing team guesses correctly, the card is discarded, otherwise you win this card.</item>
        <item>Everyone on your team must name 3 different presidents you have 30 seconds to win this card GO!</item>
        <item>One member from each team removes their left socks and has to draw a picture of a sexual position with their foot first team to guess within 2 guesses wins the card however if both pictures are the same position everyone drinks wines equal to guesses made in total by both teams and repeat; the artist doesn’t change.</item>
        <item>Player who selects this card has 1 minutes to draw any other player in the room, as a Rapist, A Pedophile or a Murder. Players own team has 2 chances to 1) guess the person drawn in the picture AND 2) guess is he/she a Rapist, a Pedophile or a Murder (e.g. Ben the Murderer is one guess). If guessed correctly, the subject must drink a glass of wine because they were caught and a card is awarded to the drawing team. If not, everyone else must drink a glass of wine because there is a sex offender on the loose, and it’s all your fault.</item>
        <item>The player who draws this card must recite the full names of each of their teammates last hook up (making out or sex) before the opposing team can pour and drink a glass of wine for every two players on their team. Success gets you the card. Losing team must drink more wine.</item>
        <item>A player from each team must be blindfolded and attempt to pour the most amount of wine into a wine glass without spilling. A single drop spilt will result in a voided submission. The team with the most liquid wins the card and losing blindfold-ee must drink the poured volume of both glasses.</item>
        <item>Pontificate on a topic chosen by the opposing team for 60 seconds without any fillers (er, um, uh, y’know) or pauses over 3 seconds. Opposing team may try to interrupt. Completion wins the card.</item>
        <item>Act out your personal blow job technique for 30 seconds on a teammate’s thumb. Thumb must be fully in mouth at some point. “Candy Shop” by 50 Cent will be playing the background. Judge rules if the card is awarded.</item>
        <item>Normal spelling bee rules. Judge will select words at random from this rule book and quiz the same player from each respective team, alternating teams, in order to spell the word backward correctly. Failure to spell a word removes the player from the competition and loser must drink a glass of wine. Winning team wins the card. If no judge present then one player from each team taking turns asking the opposing team.</item>
        <item>Player that drew the card must pretend to be Trump giving a press conference defending his lewd comments about his daughter. The press conference will go for 30 seconds, and all hand motions must be included. Completion wins the card, failure results in the player getting drawn on their face with orange marker.</item>
        <item>Both Teams must elect an artist and a “holder”. The holder holds the artists two feet off the ground only using his or her hands. The artist is given a sharpie or marker and, using only their mouth to hold the marker, must draw an object chosen by the judge. After two minutes, both artists stop and the judge picks the closest representation of the object. If the artist’s feet hit the floor, that team loses and must finish a full beer each.</item>
        <item>Name 10 international capitals in 30 seconds to win this card. Go.</item>
        <item>If you chose to keep the card, everyone on your team gets a nickname (decided by your team). Now, you must only refer to each other by your nicknames. Failure to do so will result in losing two points.</item>
    </string-array>
    <string-array name="mind_deck_image_url">
        <item>https://c1.staticflickr.com/5/4162/34053589990_8fcbf56b2f_z.jpg</item>
        <item>https://c1.staticflickr.com/5/4177/34033652000_c1df124e69_z.jpg</item>
        <item>https://c1.staticflickr.com/6/5667/21797574696_d899ebb42b_b.jpg</item>
        <item>https://c1.staticflickr.com/8/7098/7301506118_4884ff4de5_h.jpg</item>
        <item>https://c1.staticflickr.com/5/4159/34452939285_679b126735.jpg</item>
        <item>http://maxpixel.freegreatpicture.com/static/photo/1x/Savings-Money-Rich-Coin-Glossy-A-Wealth-Of-Coins-1080535.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Lots_of_math_symbols_and_numbers.svg/500px-Lots_of_math_symbols_and_numbers.svg.png</item>
        <item>https://c1.staticflickr.com/5/4161/34286830841_8047a2954b_z.jpg</item>
        <item>https://cdn.pixabay.com/photo/2016/04/25/14/52/dollar-1352097_960_720.png</item>
        <item>https://cdn.pixabay.com/photo/2012/04/26/19/48/feet-42939_960_720.png</item>
        <item>https://c1.staticflickr.com/5/4162/34266032615_a67275c7fd_c.jpg</item>
        <item>https://c1.staticflickr.com/5/4192/33643226073_3c0781bb49_z.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/9/9d/Red_wine_in_glass.jpg</item>
        <item>https://cdn.pixabay.com/photo/2016/06/03/07/26/yada-yada-1432921_1280.jpg</item>
        <item>https://c1.staticflickr.com/3/2823/34109216292_8b99d2b704_b.jpg</item>
        <item>https://c1.staticflickr.com/5/4184/34248165156_1ddfdcc136.jpg</item>
        <item>https://c1.staticflickr.com/3/2854/34134790731_5cbfe19b10_z.jpg</item>
        <item>https://c1.staticflickr.com/8/7146/6508775263_400265474d_b.jpg</item>
        <item>https://c1.staticflickr.com/3/2813/34288777505_1a815c89c2_b.jpg</item>
        <item>https://c1.staticflickr.com/3/2891/34135112701_622364493a_b.jpg</item>
    </string-array>
</resources>