<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="5dp">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/before_we_start"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:drawableBottom="@color/light_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
                <TextView
                    android:id="@+id/playersShouldBringTV"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/pick_a_judge"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:buttonTint="@color/light_gray"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="20dp"
                    android:text="@string/reads_cards"
                    android:textSize="20sp" />

                <TextView
                    android:buttonTint="@color/light_gray"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="20dp"
                    android:text="@string/has_final_say_on_everything"
                    android:textSize="20sp" />

                <TextView
                    android:buttonTint="@color/light_gray"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="20dp"
                    android:text="@string/ex_who_wins_card"
                    android:textSize="20sp" />

                <TextView
                    android:buttonTint="@color/light_gray"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="20dp"
                    android:text="@string/rule_interpretation"
                    android:textSize="20sp" />

                <TextView
                    android:buttonTint="@color/light_gray"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="20dp"
                    android:text="@string/facilitates_the_game"
                    android:textSize="20sp" />


                <TextView
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/split_into_2_teams"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/next_button_setup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onStartGameClick"
                    android:backgroundTint="#5b9c3c"
                    android:text="@string/start" />

            </LinearLayout>
        </LinearLayout>

    <!--</ScrollView>-->

</ScrollView>
